<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="@integer/number_row_weight">

        <TextView
            android:id="@+id/main_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="@integer/text_vies_span"
            android:gravity="bottom"
            android:paddingStart="@dimen/main_text_padding_in_dp"
            android:paddingEnd="@dimen/main_text_padding_in_dp"
            android:text="@string/main_text"
            android:textSize="@dimen/text_size_in_sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="@integer/text_vies_span"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="@integer/number_row_weight">

        <Button
            android:id="@+id/one"
            android:tag="@string/numberTag"
            android:text="@string/one"
            android:textStyle="italic"
            android:textSize="@dimen/text_size_in_sp"
            android:background="@drawable/button_background_selector"
            android:textColor="@drawable/button_text_color_selector"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/two"
            android:tag="@string/numberTag"
            android:text="@string/two"
            android:textStyle="italic"
            android:textSize="@dimen/text_size_in_sp"
            android:background="@drawable/button_background_selector"
            android:textColor="@drawable/button_text_color_selector"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/three"
            android:tag="@string/numberTag"
            android:text="@string/three"
            android:textStyle="italic"
            android:textSize="@dimen/text_size_in_sp"
            android:background="@drawable/button_background_selector"
            android:textColor="@drawable/button_text_color_selector"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="@integer/number_row_weight">

        <Button
            android:id="@+id/four"
            android:tag="@string/numberTag"
            android:text="@string/four"
            android:textStyle="italic"
            android:textSize="@dimen/text_size_in_sp"
            android:background="@drawable/button_background_selector"
            android:textColor="@drawable/button_text_color_selector"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/five"
            android:tag="@string/numberTag"
            android:text="@string/five"
            android:textStyle="italic"
            android:textSize="@dimen/text_size_in_sp"
            android:background="@drawable/button_background_selector"
            android:textColor="@drawable/button_text_color_selector"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/six"
            android:tag="@string/numberTag"
            android:text="@string/six"
            android:textStyle="italic"
            android:textSize="@dimen/text_size_in_sp"
            android:background="@drawable/button_background_selector"
            android:textColor="@drawable/button_text_color_selector"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="@integer/number_row_weight">

        <Button
            android:id="@+id/seven"
            android:tag="@string/numberTag"
            android:text="@string/seven"
            android:textStyle="italic"
            android:textSize="@dimen/text_size_in_sp"
            android:background="@drawable/button_background_selector"
            android:textColor="@drawable/button_text_color_selector"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/eight"
            android:tag="@string/numberTag"
            android:text="@string/eight"
            android:textStyle="italic"
            android:textSize="@dimen/text_size_in_sp"
            android:background="@drawable/button_background_selector"
            android:textColor="@drawable/button_text_color_selector"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/nine"
            android:tag="@string/numberTag"
            android:text="@string/nine"
            android:textStyle="italic"
            android:textSize="@dimen/text_size_in_sp"
            android:background="@drawable/button_background_selector"
            android:textColor="@drawable/button_text_color_selector"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="@integer/number_row_weight">

        <Button
            android:id="@+id/plus"
            android:tag="@string/operatorTag"
            android:text="@string/plus"
            android:textStyle="italic"
            android:textSize="@dimen/text_size_in_sp"
            android:background="@drawable/button_background_selector"
            android:textColor="@drawable/button_text_color_selector"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/zero"
            android:tag="@string/numberTag"
            android:text="@string/zero"
            android:textStyle="italic"
            android:textSize="@dimen/text_size_in_sp"
            android:background="@drawable/button_background_selector"
            android:textColor="@drawable/button_text_color_selector"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/minus"
            android:tag="@string/operatorTag"
            android:text="@string/minus"
            android:textStyle="italic"
            android:textSize="@dimen/text_size_in_sp"
            android:background="@drawable/button_background_selector"
            android:textColor="@drawable/button_text_color_selector"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="@integer/number_row_weight">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/clear"
            android:text="@string/clear"
            android:textStyle="italic"
            android:textSize="@dimen/text_size_in_sp"
            android:background="@drawable/bottom_buttons_background_selector"
            android:textColor="@drawable/button_text_color_selector"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/equally"
            android:text="@string/equally"
            android:textStyle="italic"
            android:textSize="@dimen/text_size_in_sp"
            android:background="@drawable/bottom_buttons_background_selector"
            android:textColor="@drawable/button_text_color_selector"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableRow>

</TableLayout>